--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!---BARRA DE NAVEGAÇÃO-->
     <header>    
         <div class="interface">
 
@@ -23,6 +24,7 @@
                     <li><a href=#>Inicio</a></li>
                     <li><a href=#>Sobre</a></li>
                     <li><a href=#>Qualidades</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         <div class="btn-contato">
@@ -35,38 +37,27 @@
         <section class="Topo-do-site">
             <div class="interace">
                 <div class="flex">
-                    <div class="txt-topo-site">
-                        <h1>OBJETIVO PESSOAL<span>.</span></h1>
-                        <P>COMO OBJETIVO PESSOAL, TENHO DE LOGO APÓS A CONCLUSÃO DO ENSINO MÉDIO JUNTO DO TECNICO EM INFORMÁTICA, ME INGRESSAR EM ALGUMA FACULDADE DA ÁREA DE PROGRAMAÇÃO E ME TORNAR UM FRONT-END</P>
-                        <div class="btn-contato">
-                            <a href="#"></a>
-                            <button>Entre em Contato</button>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
+        <!----INICIO/BANNER--->
+        <!---MENU-->
         <section class="menu">
-            <div class="interface">
-                <h2>SOBRE<span>MIM</span></h2>
             <div class="flex">
                 <div class="sobre-box ">
-                    <img src="IMAGENS PORTFOLIO/IMG_6155.HEIC" alt="foto minha">
-                    <h3>SOBRE</h3>
-                    <p>Olá, meu nome é Antonio Eduardo, tenho 17 anos de idade e sou aluno de informática do IFMA-Campus Açailândia.
-                       Me facinei por programação ano passado ao iniciar no curso, por mais que já tivesse contato com informática antes
-                       não tinha sido dessa maneira. Tenho diveros planos pro futuro, o principal é seguir na área de programação.
-                       Trabalho muito bem em equipe, gosto de ouvir outras sugestões e gosto muito de esportes.</p>
+                    <img src="#" alt="">
+                    <h2>SOBRE MIM</h2>
+                    <p>Sou estudante do segundo ano do curso Tec. em Informática pelo IFMA - Campus Açailândia</p>
                 </div>
-
-                <div class="sobre-box ">
+        <!----QUALIDADE---->
+                <div class=" ">
                     <h3></h3>
                     <p></p>
                 </div>
+        <!----PROJETOS---->
 
-
-                <div class="sobre-box ">
-                    <h3>SOBRE</h3>
+                <div class="">
+                    <h3></h3>
                     <p></p>
                 </div>
             </div>
