--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -11,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://kit.fontawesome.com/4bb4dfed16.js" crossorigin="anonymous"></script>
     <!-- FIM -->
     <title>Meu Portfólio</title>
 </head>
@@ -22,7 +24,7 @@
         <div class="interface">
             <div class="logo">
                 <a href="">
-                    <img src="#">
+                    <img src="imagens/logo haikyuu.png" class="logo-img">
                 </a>
                 
             </div>
@@ -40,6 +42,15 @@
                     <button>Contato</button>
                 </a>
         </div>
+        <div class="menu-icon" onclick="openMenu()">
+            <i class="fa-solid fa-bars hamburger"></i>
+        </div>
+        <menu class="menu-mobile">
+            <a href="#" class="active link">home</a>
+            <a href="#" class="link">sobre mim</a>
+            <a href="#" class="link">Trabalhos</a>
+            <a href="#" class="link">contato</a>
+        </menu>
     </header>
     <main>
         <section class="Topo-do-site">
@@ -49,7 +60,7 @@
             </div>
         </section>
         <!----INICIO/BANNER--->
-        <!---MENU-->
+        <!---SOBRE MIM-->
         <section class="menu">
             <div class="flex">
                 <div class="sobre-box ">
@@ -72,6 +83,7 @@
             </div>
         </section>
     </main>
+    <script src="index.js"></script>
 </body>
 
 </html>
