--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <div class="text-animado">
                 <h3>Estudante de informática do IFMA- Campus Açailândia</h3>
             </div>
+            <div class="btn-box">
+                <a href="#" class="btn">#</a>
+                <a href="#" class="btn">#</a>
+            </div>
         </div>
     </section>
 
