--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
     <div class="skills section" id="skills">
-        <div class="container" id="skills-container">
+        <div class="container skills-container">
             <div class="skills-title">
                 <h1 class="title">Habilidades</h1>
             </div>
@@ -106,6 +106,23 @@
                     <div class="lvl">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="projects section" id="projetos">
+        <div class="container skills-container">
+            <div class="skills-title">
+                <h1 class="title">Projetos</h1>
+            </div>
+            <div class="boxes">
+                <div class="projeto" id="projeto1">
+                    <h2>Galeria</h2>
+                    <a href="https://educarv0.github.io/galeria-de-fotos/" target="_blank" rel="noopener noreferrer" class="project-link"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="projeto" id="projeto2">
+                    <h2>Sistema Solar</h2>
+                    <a href="https://educarv0.github.io/projetos/" target="_blank" rel="noopener noreferrer" class="project-link"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </div>
