--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#sobremim" class="links">Sobre mim</a></li>
             <li><a href="#skills" class="links">Habilidades</a></li>
             <li><a href="#projetos" class="links">Projetos</a></li>
-            <li><a href="pages/contato.html" class="links">Contato</a></li>
+            <li><a href="https://educarv0.github.io/formulario/" class="links">Contato</a></li>
         </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars"></i>
@@ -35,7 +35,6 @@
                     <a href="#" target="_blank" class="contact"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="#" target="_blank" class="contact"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/educarv0" target="_blank" class="contact"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" target="_blank" class="contact"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
@@ -124,6 +123,24 @@
                     <h2>Sistema Solar</h2>
                     <a href="https://educarv0.github.io/projetos/" target="_blank" rel="noopener noreferrer" class="project-link"><i class="fa-brands fa-github"></i></a>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="rodape">
+        <div class="rodape-container">
+            <div class="flex">
+                <a href="#" target="_blank" class="contact"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="#" target="_blank" class="contact"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/educarv0" target="_blank" class="contact"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <div class="flex">
+                <a href="#sobremim" class="rodape-links">Sobre mim</a>
+                <a href="#skills" class="rodape-links">Habilidades</a>
+                <a href="#projetos" class="rodape-links">Projetos</a>
+                <a href="https://educarv0.github.io/formulario/" class="rodape-links">Contato</a>
+            </div>
+            <div class="flex">
+                <h3>@ 2024 Antonio Eduardo</h3>
             </div>
         </div>
     </div>
