--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h1 class="title">Antonio Eduardo</h1>
                 <h3>Estudante de Informática</h3>
                 <div class="contacts-container">
-                    <a href="#" target="_blank" class="contact"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="#" target="_blank" class="contact"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://wa.me/5599991960434" target="_blank" class="contact"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com/_dudu04_07" target="_blank" class="contact"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/educarv0" target="_blank" class="contact"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
